# traveling_sales_man_alternative

./: README.md  pyproject.toml  shortest_path.py  test_short_path.py
core/directions/: shortest_path.py
core/utils/kml_helper/: kml.py
tests/: test_short_path.py
