[tool.poetry]
name = "traveling_sales_man_alternative"
version = "0.1.0"
description = ""
authors = ["Danilo Paes <danilopaesdesouza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastkml = "^0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
